nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: lscr.io/linuxserver/nextcloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: data-volume
          mountPath: /data
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: nextcloud-config-pvc
      - name: data-volume
        persistentVolumeClaim:
          claimName: nextcloud-data-pvc
